Corrigindo as rotas
